Incorrect Mantaflow fluid border interaction when collision is turned off #77285

Closed
opened 2020-06-02 21:52:26 +02:00 by Scott VanKirk · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-01 20:37, hash: 1d4bae8566
Worked: (newest version of Blender that worked as expected)

Short description of error
When you turn off bottom 'border collision' checkbox, the fluid still interacts with the border.

Exact steps for others to reproduce the error
create a cube.
Use quick effects fluid.
Set flow behavior of box to 'inflow'
Turn uncheck border collision bottom,
run simulation, see small ring form around stream at bottom.

#77285.blend

image.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.92 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-01 20:37, hash: `1d4bae8566` Worked: (newest version of Blender that worked as expected) **Short description of error** When you turn off bottom 'border collision' checkbox, the fluid still interacts with the border. **Exact steps for others to reproduce the error** create a cube. Use quick effects fluid. Set flow behavior of box to 'inflow' Turn uncheck border collision bottom, run simulation, see small ring form around stream at bottom. [#77285.blend](https://archive.blender.org/developer/F8573824/T77285.blend) ![image.png](https://archive.blender.org/developer/F8572830/image.png)
Author

Added subscriber: @ScottVanKirk

Added subscriber: @ScottVanKirk
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Can confirm.
Member

Added subscribers: @sebbas, @JacquesLucke

Added subscribers: @sebbas, @JacquesLucke
Member

I can reproduce it. However, I'm not sure if this is a bug or an "implementation detail". When you generate a mesh for the simulation, you see that those particles at the bottom, are not taken into account. Not sure if this is right, but it looks like mantaflow is not deleting the particles but keeps them lying around without further influencing the simulation.

@sebbas, can you confirm that?

I can reproduce it. However, I'm not sure if this is a bug or an "implementation detail". When you generate a mesh for the simulation, you see that those particles at the bottom, are not taken into account. Not sure if this is right, but it looks like mantaflow is not deleting the particles but keeps them lying around without further influencing the simulation. @sebbas, can you confirm that?

Yes, can confirm the issue too. While the mesh is unaffected, the FLIP particles really should not go beyond the domain borders (the "ring" from your scene is odd too).
Will investigate this issue further.

Yes, can confirm the issue too. While the mesh is unaffected, the FLIP particles really should not go beyond the domain borders (the "ring" from your scene is odd too). Will investigate this issue further.
Member

Will classify as bug then.

Will classify as bug then.

This issue was referenced by 495b0eff9a

This issue was referenced by 495b0eff9a2d5e3f32c6fd954107bfbf709f33c3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-06-25 16:50:09 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77285
No description provided.