Fix T77285: Incorrect Mantaflow fluid border interaction when collision is turned off

Incorrect boolean for 'open' domain borders.